Added gateway network-users implementation, tests, validators
